fix: sua cac code quality bug trong service layer
- ReviewService: batch load CustomerProfile trong cac method tra ve list thay vi query tung cai mot
- AdminDashboardService: batch load CustomerProfile cho tat ca user trong mot query
- ProductVariantRepository: them @EntityGraph de eager load product trong getLowStock
- ProductService: createProduct dung findAllById cho categories, thay the bon cho inline enrich bang goi enrichProducts()
- OrderService: ShippingMethod chi fetch mot lan trong checkout()
- AuthService: xoa lan save user thua trong register()
- JwtFilter: thay e.printStackTrace() bang log.warn()